// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`returns raw schema column information > rawColumns 1`] = `
[
  {
    "dataType": "int",
    "defaultValue": undefined,
    "description": "",
    "isArray": false,
    "isEnum": false,
    "isNullable": false,
    "isSerial": true,
    "maxLen": undefined,
    "name": "id",
    "schemaName": "test",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "varchar",
    "defaultValue": undefined,
    "description": "",
    "isArray": false,
    "isEnum": false,
    "isNullable": false,
    "isSerial": false,
    "maxLen": 100,
    "name": "name",
    "schemaName": "test",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "varchar",
    "defaultValue": undefined,
    "description": "",
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isSerial": false,
    "maxLen": 255,
    "name": "email",
    "schemaName": "test",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "varchar",
    "defaultValue": "active",
    "description": "",
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isSerial": false,
    "maxLen": 20,
    "name": "status",
    "schemaName": "test",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "json",
    "defaultValue": undefined,
    "description": "",
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isSerial": false,
    "maxLen": undefined,
    "name": "profile",
    "schemaName": "test",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "timestamp",
    "defaultValue": "CURRENT_TIMESTAMP",
    "description": "",
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isSerial": false,
    "maxLen": undefined,
    "name": "created_at",
    "schemaName": "test",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "enum",
    "defaultValue": "viewer",
    "description": "",
    "enumValues": [
      "admin",
      "editor",
      "viewer",
    ],
    "isArray": false,
    "isEnum": true,
    "isNullable": true,
    "isSerial": false,
    "maxLen": 6,
    "name": "roles",
    "schemaName": "test",
    "tableName": "users",
    "tableType": "table",
  },
]
`;

exports[`returns schema models > userTable 1`] = `
{
  "columns": [
    {
      "dataType": "int",
      "defaultValue": undefined,
      "description": "",
      "isArray": false,
      "isEnum": false,
      "isNullable": false,
      "isReadOptional": false,
      "isSerial": true,
      "isWritable": false,
      "isWriteOptional": false,
      "maxLen": undefined,
      "name": "id",
      "schemaName": "test",
      "tableName": "users",
      "tableType": "table",
      "zodType": "int",
    },
    {
      "dataType": "varchar",
      "defaultValue": undefined,
      "description": "",
      "isArray": false,
      "isEnum": false,
      "isNullable": false,
      "isReadOptional": false,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": false,
      "maxLen": 100,
      "name": "name",
      "schemaName": "test",
      "tableName": "users",
      "tableType": "table",
      "zodType": "string",
    },
    {
      "dataType": "varchar",
      "defaultValue": undefined,
      "description": "",
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": 255,
      "name": "email",
      "schemaName": "test",
      "tableName": "users",
      "tableType": "table",
      "zodType": "string",
    },
    {
      "dataType": "varchar",
      "defaultValue": "active",
      "description": "",
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": 20,
      "name": "status",
      "schemaName": "test",
      "tableName": "users",
      "tableType": "table",
      "zodType": "string",
    },
    {
      "dataType": "json",
      "defaultValue": undefined,
      "description": "",
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": undefined,
      "name": "profile",
      "schemaName": "test",
      "tableName": "users",
      "tableType": "table",
      "zodType": "json",
    },
    {
      "dataType": "timestamp",
      "defaultValue": "CURRENT_TIMESTAMP",
      "description": "",
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": undefined,
      "name": "created_at",
      "schemaName": "test",
      "tableName": "users",
      "tableType": "table",
      "zodType": "date",
    },
    {
      "dataType": "enum",
      "defaultValue": "viewer",
      "description": "",
      "enumValues": [
        "admin",
        "editor",
        "viewer",
      ],
      "isArray": false,
      "isEnum": true,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": 6,
      "name": "roles",
      "schemaName": "test",
      "tableName": "users",
      "tableType": "table",
      "zodType": "any",
    },
  ],
  "name": "users",
  "schemaName": "test",
  "type": "table",
}
`;
